<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="30dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="分享须知"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textColor="?theme_color_3"
        android:textSize="@dimen/text_3"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?theme_color_3"
            android:textSize="@dimen/text_3"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="6dp"
            android:text="1、"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:lineSpacingExtra="6dp"
            android:layout_marginLeft="4dp"
            android:paddingRight="10dp"
            android:text="@string/share_information_1"
            android:textColor="?theme_color_3"
            android:textSize="@dimen/text_3" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?theme_color_3"
            android:textSize="@dimen/text_3"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dip"
            android:lineSpacingExtra="6dp"
            android:text="2、"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:lineSpacingExtra="6dp"
            android:layout_marginLeft="4dp"
            android:paddingRight="10dp"
            android:id="@+id/tvInformation2"
            android:text="@string/share_information_2"
            android:textColor="?theme_color_3"
            android:textSize="@dimen/text_3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?theme_color_3"
            android:textSize="@dimen/text_3"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dip"
            android:lineSpacingExtra="6dp"
            android:text="3、"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:lineSpacingExtra="6dp"
            android:layout_marginLeft="4dp"
            android:paddingRight="10dp"
            android:id="@+id/tvInformation3"
            android:text="@string/share_information_3"
            android:textColor="?theme_color_3"
            android:textSize="@dimen/text_3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?theme_color_3"
            android:textSize="@dimen/text_3"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dip"
            android:lineSpacingExtra="6dp"
            android:text="4、"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:lineSpacingExtra="6dp"
            android:layout_marginLeft="4dp"
            android:paddingRight="10dp"
            android:text="@string/share_information_4"
            android:textColor="?theme_color_3"
            android:textSize="@dimen/text_3" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?theme_color_3"
            android:textSize="@dimen/text_3"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dip"
            android:lineSpacingExtra="6dp"
            android:text="5、"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:lineSpacingExtra="6dp"
            android:layout_marginLeft="4dp"
            android:paddingRight="10dp"
            android:text="@string/share_information_5"
            android:textColor="?theme_color_3"/>
    </LinearLayout>
</LinearLayout>
